@@ -296,4 +296,12 @@ Feature: Multi Elements
     And the text of div 1 should be "Div 1"
     And the text of div 2 should be "Div 2"
     And the text of div 3 should be "Div 3"
-    
+
+  @focus
+  Scenario: Selecting buttons based on a class declaration
+    When I select the buttons using the generated methods
+    Then I should have 3 buttons
+    And the value of button 1 should be "Button 1"
+    And the value of button 2 should be "Button 2"
+    And the value of button 3 should be "Button 3"
+
